@@ -23,6 +23,7 @@ Changelog for sg3_utils-1.27 [20090224] [svn: r219]
   - sg_modes: add ATA power condition mode page
   - sg_logs: protocol specific (SAS) lpage sync to sas2r15
     - power condition transitions lpage (added in spc4r18)
+    - extra parameters for start-stop cycle counter lpage
   - sg3_utils.spec: correction to configure call
   - sg_pt: add scsi_pt_open_device_flags() call to public interface
     - add scsi_pt_version() and clear_scsi_pt_obj() calls
